samples/_failures_safe/1761705299_fe60c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c1416bd8.c:156: error: expected ‘;’, ‘,’ or ‘)’ at end of input
